--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/lab": "^5.0.0-alpha.155",
     "@mui/material": "^5.14.20",
     "@mui/x-date-pickers": "^6.18.4",
+    "@mui/x-date-pickers-pro": "^6.18.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
